objects/LAT_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>LAT_ID_JDE_Invoice__c</fullName>
        <label>ID JDE Invoice</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_IdCRMval__c</fullName>
        <label>IdCRMval</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_IdCrmDoc__c</fullName>
        <label>IdCrmDoc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_InvoiceAmount__c</fullName>
        <label>InvoiceAmount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_InvoiceExplanation__c</fullName>
        <label>InvoiceExplanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_InvoiceNumber__c</fullName>
        <label>invoiceNumber</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_InvoiceTaxAmount__c</fullName>
        <label>InvoiceTaxAmount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_InvoiceTaxableAmount__c</fullName>
        <label>InvoiceTaxableAmount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_InvoiceType__c</fullName>
        <label>invoiceType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Receipt__c</fullName>
        <label>Receipt</label>
        <referenceTo>RCP_Receipt_ARG__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <label>Invoices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>